--- a/requirements.txt
+++ b/requirements.txt
@@ -54,7 +54,8 @@ pyrsistent==0.14.11
 python-dateutil==2.8.1
 pytz==2018.9
 PyYAML==5.3.1
-pyzmq==18.0.0
+#pyzmq==18.0.0
+pyzmq
 qtconsole==4.4.3
 Send2Trash==1.5.0
 six==1.12.0
